--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -23,8 +23,12 @@ gem "elasticsearch", "~> 6.0"
 gem "fluent-plugin-elasticsearch", "~> 4.0.9"
 <% when "elasticsearch7" %>
 gem "elasticsearch", "~> 7.0"
-gem "fluent-plugin-elasticsearch", "~> 5.1.1"
+gem "fluent-plugin-elasticsearch", "~> 5.3.0"
 gem "elasticsearch-xpack", "~> 7.0"
+gem "fluent-plugin-dedot_filter", "~> 1.0"
+<% when "elasticsearch8" %>
+gem "elasticsearch", "~> 8.0"
+gem "fluent-plugin-elasticsearch", "~> 5.3.0"
 gem "fluent-plugin-dedot_filter", "~> 1.0"
 <% when "opensearch" %>
 gem "fluent-plugin-opensearch", "~> 1.0.6"
