--- a/templates/entrypoint.sh.erb
+++ b/templates/entrypoint.sh.erb
@@ -15,5 +15,16 @@ if [ -n "$SIMPLE_SNIFFER" -a -f "$SIMPLE_SNIFFER" ] ; then
 fi
 
 <% end %>
+<% if target == "opensearch" %>
+
+set -e
+
+SIMPLE_SNIFFER=$( gem contents fluent-plugin-opensearch | grep opensearch_simple_sniffer.rb )
+
+if [ -n "$SIMPLE_SNIFFER" -a -f "$SIMPLE_SNIFFER" ] ; then
+    FLUENTD_OPT="$FLUENTD_OPT -r $SIMPLE_SNIFFER"
+fi
+
+<% end %>
 
 exec fluentd -c /fluentd/etc/${FLUENTD_CONF} -p /fluentd/plugins --gemfile /fluentd/Gemfile ${FLUENTD_OPT}
