--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -7,9 +7,9 @@
 
 <% if is_arm64 %>
 # For multiarch build on Docker hub automated build.
-FROM fluent/fluentd:<%= fluentd_ver %>-debian-arm64-1.1
+FROM fluent/fluentd:<%= fluentd_ver %>-debian-arm64
 <% else %>
-FROM fluent/fluentd:<%= fluentd_ver %>-debian-amd64-1.0
+FROM fluent/fluentd:<%= fluentd_ver %>-debian-amd64
 <% end %>
 
 LABEL maintainer="Eduardo Silva <eduardo@treasure-data.com>"
