--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -248,6 +248,7 @@ Some images are contributed by users. If you have a problem/question for followi
 - Amazon Kinesis : @shiftky
 - logz.io : @SaMnCo / @jamielennox
 - splunkhec: @FutureSharks
+- Datadog : @nbifrye
 
 Currently, we don't accept new destination request without contribution.
 See https://github.com/fluent/fluentd-kubernetes-daemonset/issues/293
